@@ -12,9 +12,9 @@ import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.*;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.inject.Inject;
 import org.apache.kafka.common.TopicPartition;
 
-import javax.inject.Inject;
 import javax.validation.Valid;
 import java.time.Instant;
 import java.util.Date;
@@ -84,7 +84,7 @@ public class TopicController extends NamespacedResourceController {
             if (!collidingTopics.isEmpty()) {
                 validationErrors.addAll(collidingTopics.stream()
                         .map(collidingTopic -> String.format("Topic %s collides with existing topics: %s.", topic.getMetadata().getName(), collidingTopic))
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         } else {
             validationErrors.addAll(topicService.validateTopicUpdate(ns, existingTopic.get(), topic));
@@ -191,7 +191,7 @@ public class TopicController extends NamespacedResourceController {
                     sendEventLog("Topic", topic.getMetadata(), ApplyStatus.created, null, topic.getSpec());
                     return topicService.create(topic);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
